Added field labels and text boxes

--- a/MiraclePillsPicker/Base.lproj/Main.storyboard
+++ b/MiraclePillsPicker/Base.lproj/Main.storyboard
@@ -40,16 +40,110 @@
                                     <constraint firstAttribute="height" constant="1" id="cNd-zC-fOc"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxL-HL-4EC">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="0wO-RZ-adp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Clm-Oo-h8k">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="9kn-Bw-aGO"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="SUE-TQ-B5x"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rim-Vn-vd5">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="E4X-qa-T1O"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="JzF-lT-AfI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OMc-HZ-ijg">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="6Ua-MJ-KEj"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your city..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Arn-9X-Gq9">
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="KB9-Nq-Rsq"/>
+                                    <constraint firstAttribute="height" constant="30" id="t8J-I5-o0k"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your state..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lvi-d4-QJT">
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="HSu-pF-ubY"/>
+                                    <constraint firstAttribute="height" constant="30" id="rQX-bW-1x0"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Street Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEQ-Ii-aUc">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="bNi-hs-uJO"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="iXH-hH-2BA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your address..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fly-Nq-lfk">
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="BZr-P8-SL8"/>
+                                    <constraint firstAttribute="height" constant="30" id="M2i-cq-Z0n"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="lvi-d4-QJT" firstAttribute="top" secondItem="Rim-Vn-vd5" secondAttribute="bottom" constant="8" id="0GU-wH-TaG"/>
+                            <constraint firstItem="lvi-d4-QJT" firstAttribute="trailing" secondItem="Rim-Vn-vd5" secondAttribute="trailing" id="0yQ-ih-fzl"/>
+                            <constraint firstItem="Arn-9X-Gq9" firstAttribute="trailing" secondItem="Clm-Oo-h8k" secondAttribute="trailing" id="1dy-oP-sdT"/>
+                            <constraint firstItem="OMc-HZ-ijg" firstAttribute="leading" secondItem="jxL-HL-4EC" secondAttribute="leading" id="3Vn-qp-pe6"/>
+                            <constraint firstItem="Arn-9X-Gq9" firstAttribute="leading" secondItem="Clm-Oo-h8k" secondAttribute="leading" id="8WT-rX-pV3"/>
+                            <constraint firstItem="cEQ-Ii-aUc" firstAttribute="leading" secondItem="OMc-HZ-ijg" secondAttribute="leading" id="9WI-0e-v55"/>
+                            <constraint firstItem="OMc-HZ-ijg" firstAttribute="trailing" secondItem="jxL-HL-4EC" secondAttribute="trailing" id="Co6-Dj-v3w"/>
                             <constraint firstItem="Rur-q6-Wf9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="HOg-om-O7P"/>
+                            <constraint firstItem="jxL-HL-4EC" firstAttribute="top" secondItem="Rur-q6-Wf9" secondAttribute="bottom" constant="8" id="Kgd-g5-5Rx"/>
+                            <constraint firstItem="Rim-Vn-vd5" firstAttribute="top" secondItem="Arn-9X-Gq9" secondAttribute="bottom" constant="8" id="LR1-uS-EWx"/>
+                            <constraint firstItem="OMc-HZ-ijg" firstAttribute="top" secondItem="jxL-HL-4EC" secondAttribute="bottom" constant="8" id="Oh0-3v-RYE"/>
+                            <constraint firstItem="Clm-Oo-h8k" firstAttribute="leading" secondItem="Fly-Nq-lfk" secondAttribute="leading" id="Ph9-Jd-95u"/>
+                            <constraint firstItem="Rim-Vn-vd5" firstAttribute="trailing" secondItem="Arn-9X-Gq9" secondAttribute="trailing" id="Qna-Bo-xze"/>
+                            <constraint firstItem="jxL-HL-4EC" firstAttribute="trailing" secondItem="Rur-q6-Wf9" secondAttribute="trailing" id="Qvt-d5-ibe"/>
                             <constraint firstItem="Rur-q6-Wf9" firstAttribute="top" secondItem="aa9-e3-Z3f" secondAttribute="bottom" constant="8" id="Tci-RF-1nm"/>
+                            <constraint firstItem="Fly-Nq-lfk" firstAttribute="leading" secondItem="cEQ-Ii-aUc" secondAttribute="leading" id="Wq5-df-fPe"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xrk-OE-7N3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Rur-q6-Wf9" secondAttribute="trailing" constant="20" id="YBp-Cm-OlT"/>
+                            <constraint firstItem="lvi-d4-QJT" firstAttribute="leading" secondItem="Rim-Vn-vd5" secondAttribute="leading" id="cMm-ys-SJi"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="cUt-Kt-zxa"/>
+                            <constraint firstItem="Fly-Nq-lfk" firstAttribute="top" secondItem="cEQ-Ii-aUc" secondAttribute="bottom" constant="8" id="gIk-df-0Zx"/>
+                            <constraint firstItem="Fly-Nq-lfk" firstAttribute="trailing" secondItem="cEQ-Ii-aUc" secondAttribute="trailing" id="gJX-lb-91n"/>
+                            <constraint firstItem="cEQ-Ii-aUc" firstAttribute="trailing" secondItem="OMc-HZ-ijg" secondAttribute="trailing" id="gwi-8H-t72"/>
                             <constraint firstItem="aa9-e3-Z3f" firstAttribute="top" secondItem="0cu-nK-R1Y" secondAttribute="bottom" constant="10" id="hfG-en-UaR"/>
                             <constraint firstItem="aa9-e3-Z3f" firstAttribute="centerX" secondItem="0cu-nK-R1Y" secondAttribute="centerX" id="i2V-GO-TGA"/>
+                            <constraint firstItem="jxL-HL-4EC" firstAttribute="leading" secondItem="Rur-q6-Wf9" secondAttribute="leading" id="iNq-Ym-bM1"/>
+                            <constraint firstItem="cEQ-Ii-aUc" firstAttribute="top" secondItem="OMc-HZ-ijg" secondAttribute="bottom" constant="8" id="kF8-tL-mab"/>
+                            <constraint firstItem="Clm-Oo-h8k" firstAttribute="trailing" secondItem="Fly-Nq-lfk" secondAttribute="trailing" id="mrO-nX-EAL"/>
+                            <constraint firstItem="Rim-Vn-vd5" firstAttribute="leading" secondItem="Arn-9X-Gq9" secondAttribute="leading" id="oGJ-jq-qdQ"/>
+                            <constraint firstItem="Clm-Oo-h8k" firstAttribute="top" secondItem="Fly-Nq-lfk" secondAttribute="bottom" constant="8" id="qfI-iK-fAc"/>
+                            <constraint firstItem="Arn-9X-Gq9" firstAttribute="top" secondItem="Clm-Oo-h8k" secondAttribute="bottom" constant="8" id="tyy-Pi-TT1"/>
                         </constraints>
                     </view>
                 </viewController>
