Added State Picker

--- a/MiraclePillsPicker/Base.lproj/Main.storyboard
+++ b/MiraclePillsPicker/Base.lproj/Main.storyboard
@@ -110,6 +110,11 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="non-KL-s6a">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="FBo-hV-j3y"/>
+                                </constraints>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -128,11 +133,13 @@
                             <constraint firstItem="Rim-Vn-vd5" firstAttribute="trailing" secondItem="Arn-9X-Gq9" secondAttribute="trailing" id="Qna-Bo-xze"/>
                             <constraint firstItem="jxL-HL-4EC" firstAttribute="trailing" secondItem="Rur-q6-Wf9" secondAttribute="trailing" id="Qvt-d5-ibe"/>
                             <constraint firstItem="Rur-q6-Wf9" firstAttribute="top" secondItem="aa9-e3-Z3f" secondAttribute="bottom" constant="8" id="Tci-RF-1nm"/>
+                            <constraint firstItem="non-KL-s6a" firstAttribute="trailing" secondItem="lvi-d4-QJT" secondAttribute="trailing" id="VdN-pa-aa8"/>
                             <constraint firstItem="Fly-Nq-lfk" firstAttribute="leading" secondItem="cEQ-Ii-aUc" secondAttribute="leading" id="Wq5-df-fPe"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xrk-OE-7N3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Rur-q6-Wf9" secondAttribute="trailing" constant="20" id="YBp-Cm-OlT"/>
                             <constraint firstItem="lvi-d4-QJT" firstAttribute="leading" secondItem="Rim-Vn-vd5" secondAttribute="leading" id="cMm-ys-SJi"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="cUt-Kt-zxa"/>
+                            <constraint firstItem="non-KL-s6a" firstAttribute="top" secondItem="lvi-d4-QJT" secondAttribute="bottom" constant="8" id="eBW-L2-9RV"/>
                             <constraint firstItem="Fly-Nq-lfk" firstAttribute="top" secondItem="cEQ-Ii-aUc" secondAttribute="bottom" constant="8" id="gIk-df-0Zx"/>
                             <constraint firstItem="Fly-Nq-lfk" firstAttribute="trailing" secondItem="cEQ-Ii-aUc" secondAttribute="trailing" id="gJX-lb-91n"/>
                             <constraint firstItem="cEQ-Ii-aUc" firstAttribute="trailing" secondItem="OMc-HZ-ijg" secondAttribute="trailing" id="gwi-8H-t72"/>
@@ -144,6 +151,7 @@
                             <constraint firstItem="Rim-Vn-vd5" firstAttribute="leading" secondItem="Arn-9X-Gq9" secondAttribute="leading" id="oGJ-jq-qdQ"/>
                             <constraint firstItem="Clm-Oo-h8k" firstAttribute="top" secondItem="Fly-Nq-lfk" secondAttribute="bottom" constant="8" id="qfI-iK-fAc"/>
                             <constraint firstItem="Arn-9X-Gq9" firstAttribute="top" secondItem="Clm-Oo-h8k" secondAttribute="bottom" constant="8" id="tyy-Pi-TT1"/>
+                            <constraint firstItem="non-KL-s6a" firstAttribute="leading" secondItem="lvi-d4-QJT" secondAttribute="leading" id="vdq-aT-3ht"/>
                         </constraints>
                     </view>
                 </viewController>
