--- a/MiraclePillsPicker/Base.lproj/Main.storyboard
+++ b/MiraclePillsPicker/Base.lproj/Main.storyboard
@@ -83,15 +83,6 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your state..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lvi-d4-QJT">
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="HSu-pF-ubY"/>
-                                    <constraint firstAttribute="height" constant="30" id="rQX-bW-1x0"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Street Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEQ-Ii-aUc">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="bNi-hs-uJO"/>
@@ -112,19 +103,28 @@
                             </textField>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="non-KL-s6a">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="140" id="FBo-hV-j3y"/>
+                                    <constraint firstAttribute="height" constant="100" id="FBo-hV-j3y"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="VWn-Qm-PQv"/>
                                 </constraints>
                             </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FAI-Kx-7GC">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="146" id="Ctn-QL-rym"/>
+                                    <constraint firstAttribute="height" constant="30" id="JRF-TF-hfz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Choose Your State"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="lvi-d4-QJT" firstAttribute="top" secondItem="Rim-Vn-vd5" secondAttribute="bottom" constant="8" id="0GU-wH-TaG"/>
-                            <constraint firstItem="lvi-d4-QJT" firstAttribute="trailing" secondItem="Rim-Vn-vd5" secondAttribute="trailing" id="0yQ-ih-fzl"/>
                             <constraint firstItem="Arn-9X-Gq9" firstAttribute="trailing" secondItem="Clm-Oo-h8k" secondAttribute="trailing" id="1dy-oP-sdT"/>
                             <constraint firstItem="OMc-HZ-ijg" firstAttribute="leading" secondItem="jxL-HL-4EC" secondAttribute="leading" id="3Vn-qp-pe6"/>
                             <constraint firstItem="Arn-9X-Gq9" firstAttribute="leading" secondItem="Clm-Oo-h8k" secondAttribute="leading" id="8WT-rX-pV3"/>
                             <constraint firstItem="cEQ-Ii-aUc" firstAttribute="leading" secondItem="OMc-HZ-ijg" secondAttribute="leading" id="9WI-0e-v55"/>
+                            <constraint firstItem="non-KL-s6a" firstAttribute="top" secondItem="FAI-Kx-7GC" secondAttribute="bottom" constant="8" id="BSs-Dz-uza"/>
                             <constraint firstItem="OMc-HZ-ijg" firstAttribute="trailing" secondItem="jxL-HL-4EC" secondAttribute="trailing" id="Co6-Dj-v3w"/>
+                            <constraint firstItem="FAI-Kx-7GC" firstAttribute="top" secondItem="Rim-Vn-vd5" secondAttribute="bottom" constant="8" id="FVI-is-vba"/>
                             <constraint firstItem="Rur-q6-Wf9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="HOg-om-O7P"/>
                             <constraint firstItem="jxL-HL-4EC" firstAttribute="top" secondItem="Rur-q6-Wf9" secondAttribute="bottom" constant="8" id="Kgd-g5-5Rx"/>
                             <constraint firstItem="Rim-Vn-vd5" firstAttribute="top" secondItem="Arn-9X-Gq9" secondAttribute="bottom" constant="8" id="LR1-uS-EWx"/>
@@ -133,13 +133,11 @@
                             <constraint firstItem="Rim-Vn-vd5" firstAttribute="trailing" secondItem="Arn-9X-Gq9" secondAttribute="trailing" id="Qna-Bo-xze"/>
                             <constraint firstItem="jxL-HL-4EC" firstAttribute="trailing" secondItem="Rur-q6-Wf9" secondAttribute="trailing" id="Qvt-d5-ibe"/>
                             <constraint firstItem="Rur-q6-Wf9" firstAttribute="top" secondItem="aa9-e3-Z3f" secondAttribute="bottom" constant="8" id="Tci-RF-1nm"/>
-                            <constraint firstItem="non-KL-s6a" firstAttribute="trailing" secondItem="lvi-d4-QJT" secondAttribute="trailing" id="VdN-pa-aa8"/>
                             <constraint firstItem="Fly-Nq-lfk" firstAttribute="leading" secondItem="cEQ-Ii-aUc" secondAttribute="leading" id="Wq5-df-fPe"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xrk-OE-7N3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Rur-q6-Wf9" secondAttribute="trailing" constant="20" id="YBp-Cm-OlT"/>
-                            <constraint firstItem="lvi-d4-QJT" firstAttribute="leading" secondItem="Rim-Vn-vd5" secondAttribute="leading" id="cMm-ys-SJi"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="cUt-Kt-zxa"/>
-                            <constraint firstItem="non-KL-s6a" firstAttribute="top" secondItem="lvi-d4-QJT" secondAttribute="bottom" constant="8" id="eBW-L2-9RV"/>
+                            <constraint firstItem="FAI-Kx-7GC" firstAttribute="leading" secondItem="Rim-Vn-vd5" secondAttribute="leading" id="g1n-Ff-f1E"/>
                             <constraint firstItem="Fly-Nq-lfk" firstAttribute="top" secondItem="cEQ-Ii-aUc" secondAttribute="bottom" constant="8" id="gIk-df-0Zx"/>
                             <constraint firstItem="Fly-Nq-lfk" firstAttribute="trailing" secondItem="cEQ-Ii-aUc" secondAttribute="trailing" id="gJX-lb-91n"/>
                             <constraint firstItem="cEQ-Ii-aUc" firstAttribute="trailing" secondItem="OMc-HZ-ijg" secondAttribute="trailing" id="gwi-8H-t72"/>
@@ -151,7 +149,8 @@
                             <constraint firstItem="Rim-Vn-vd5" firstAttribute="leading" secondItem="Arn-9X-Gq9" secondAttribute="leading" id="oGJ-jq-qdQ"/>
                             <constraint firstItem="Clm-Oo-h8k" firstAttribute="top" secondItem="Fly-Nq-lfk" secondAttribute="bottom" constant="8" id="qfI-iK-fAc"/>
                             <constraint firstItem="Arn-9X-Gq9" firstAttribute="top" secondItem="Clm-Oo-h8k" secondAttribute="bottom" constant="8" id="tyy-Pi-TT1"/>
-                            <constraint firstItem="non-KL-s6a" firstAttribute="leading" secondItem="lvi-d4-QJT" secondAttribute="leading" id="vdq-aT-3ht"/>
+                            <constraint firstItem="non-KL-s6a" firstAttribute="trailing" secondItem="Rim-Vn-vd5" secondAttribute="trailing" id="x9N-hH-gJ6"/>
+                            <constraint firstItem="non-KL-s6a" firstAttribute="leading" secondItem="Rim-Vn-vd5" secondAttribute="leading" id="xLR-tk-ul5"/>
                         </constraints>
                     </view>
                 </viewController>
