--- a/MiraclePillsPicker/Base.lproj/Main.storyboard
+++ b/MiraclePillsPicker/Base.lproj/Main.storyboard
@@ -140,7 +140,11 @@
                                     <constraint firstAttribute="height" constant="45" id="q1x-EN-rCQ"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="buyNowBtn"/>
+                                <connections>
+                                    <action selector="buyNowBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4R9-Nl-uFK"/>
+                                </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="successIndicator" translatesAutoresizingMaskIntoConstraints="NO" id="HEc-F2-GHn"/>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -148,6 +152,7 @@
                             <constraint firstItem="GGA-cp-Bhi" firstAttribute="top" secondItem="non-KL-s6a" secondAttribute="bottom" constant="20" id="1vA-eC-Len"/>
                             <constraint firstItem="OMc-HZ-ijg" firstAttribute="leading" secondItem="jxL-HL-4EC" secondAttribute="leading" id="3Vn-qp-pe6"/>
                             <constraint firstItem="wrY-1N-Z2S" firstAttribute="top" secondItem="Arn-9X-Gq9" secondAttribute="bottom" constant="8" id="57q-wO-XLD"/>
+                            <constraint firstItem="HEc-F2-GHn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8L3-he-hsg"/>
                             <constraint firstItem="Arn-9X-Gq9" firstAttribute="leading" secondItem="Clm-Oo-h8k" secondAttribute="leading" id="8WT-rX-pV3"/>
                             <constraint firstItem="cEQ-Ii-aUc" firstAttribute="leading" secondItem="OMc-HZ-ijg" secondAttribute="leading" id="9WI-0e-v55"/>
                             <constraint firstItem="non-KL-s6a" firstAttribute="top" secondItem="FAI-Kx-7GC" secondAttribute="bottom" constant="8" id="BSs-Dz-uza"/>
@@ -166,6 +171,7 @@
                             <constraint firstItem="Fly-Nq-lfk" firstAttribute="leading" secondItem="cEQ-Ii-aUc" secondAttribute="leading" id="Wq5-df-fPe"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Xrk-OE-7N3"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Rur-q6-Wf9" secondAttribute="trailing" constant="20" id="YBp-Cm-OlT"/>
+                            <constraint firstItem="HEc-F2-GHn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="YZd-i2-LUU"/>
                             <constraint firstItem="0cu-nK-R1Y" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="cUt-Kt-zxa"/>
                             <constraint firstItem="wrY-1N-Z2S" firstAttribute="trailing" secondItem="Arn-9X-Gq9" secondAttribute="trailing" id="fjy-84-kdi"/>
                             <constraint firstItem="FAI-Kx-7GC" firstAttribute="leading" secondItem="Rim-Vn-vd5" secondAttribute="leading" id="g1n-Ff-f1E"/>
@@ -187,10 +193,18 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="buyNowBtn" destination="GGA-cp-Bhi" id="UVS-Y2-U0t"/>
+                        <outlet property="cityLbl" destination="Clm-Oo-h8k" id="PDA-pH-iZC"/>
+                        <outlet property="cityTxt" destination="Arn-9X-Gq9" id="CSL-Nx-Ahf"/>
+                        <outlet property="fullNameLbl" destination="jxL-HL-4EC" id="PSY-UL-PV4"/>
+                        <outlet property="fullNameTxt" destination="OMc-HZ-ijg" id="itb-v4-dhn"/>
                         <outlet property="hideBtn1" destination="dbL-ZV-hUr" id="u4O-k9-hdA"/>
                         <outlet property="hideBtn2" destination="wrY-1N-Z2S" id="t94-JS-PY0"/>
+                        <outlet property="stateLbl" destination="Rim-Vn-vd5" id="WyK-v4-bVp"/>
                         <outlet property="statePicker" destination="non-KL-s6a" id="0wm-Op-QML"/>
                         <outlet property="statePickerBtn" destination="FAI-Kx-7GC" id="opy-xV-elV"/>
+                        <outlet property="streetAddressLbl" destination="cEQ-Ii-aUc" id="ixA-zY-Eda"/>
+                        <outlet property="streetAddressTxt" destination="Fly-Nq-lfk" id="Nn3-Bm-YZ7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -201,5 +215,6 @@
     <resources>
         <image name="buyNowBtn" width="225" height="45"/>
         <image name="miraclePillEmoji" width="90" height="90"/>
+        <image name="successIndicator" width="180" height="180"/>
     </resources>
 </document>
